log/build_2025-05-26_19-15-20/robot_camera_processor/stderr.log
/home/eragon/ArUco/src/robot_camera_processor/src/robot_camera_processor_node.cpp: In member function ‘void RobotCameraProcessor::timer_callback()’:
/home/eragon/ArUco/src/robot_camera_processor/src/robot_camera_processor_node.cpp:103:39: warning: narrowing conversion of ‘((-((RobotCameraProcessor*)this)->RobotCameraProcessor::marker_size_) / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
  103 |                         {-marker_size_/2, marker_size_/2, 0},
      |                          ~~~~~~~~~~~~~^~
/home/eragon/ArUco/src/robot_camera_processor/src/robot_camera_processor_node.cpp:103:55: warning: narrowing conversion of ‘(((RobotCameraProcessor*)this)->RobotCameraProcessor::marker_size_ / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
  103 |                         {-marker_size_/2, marker_size_/2, 0},
      |                                           ~~~~~~~~~~~~^~
/home/eragon/ArUco/src/robot_camera_processor/src/robot_camera_processor_node.cpp:104:38: warning: narrowing conversion of ‘(((RobotCameraProcessor*)this)->RobotCameraProcessor::marker_size_ / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
  104 |                         {marker_size_/2, marker_size_/2, 0},
      |                          ~~~~~~~~~~~~^~
/home/eragon/ArUco/src/robot_camera_processor/src/robot_camera_processor_node.cpp:104:54: warning: narrowing conversion of ‘(((RobotCameraProcessor*)this)->RobotCameraProcessor::marker_size_ / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
  104 |                         {marker_size_/2, marker_size_/2, 0},
      |                                          ~~~~~~~~~~~~^~
/home/eragon/ArUco/src/robot_camera_processor/src/robot_camera_processor_node.cpp:105:38: warning: narrowing conversion of ‘(((RobotCameraProcessor*)this)->RobotCameraProcessor::marker_size_ / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
  105 |                         {marker_size_/2, -marker_size_/2, 0},
      |                          ~~~~~~~~~~~~^~
/home/eragon/ArUco/src/robot_camera_processor/src/robot_camera_processor_node.cpp:105:55: warning: narrowing conversion of ‘((-((RobotCameraProcessor*)this)->RobotCameraProcessor::marker_size_) / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
  105 |                         {marker_size_/2, -marker_size_/2, 0},
      |                                          ~~~~~~~~~~~~~^~
/home/eragon/ArUco/src/robot_camera_processor/src/robot_camera_processor_node.cpp:106:39: warning: narrowing conversion of ‘((-((RobotCameraProcessor*)this)->RobotCameraProcessor::marker_size_) / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
  106 |                         {-marker_size_/2, -marker_size_/2, 0}
      |                          ~~~~~~~~~~~~~^~
/home/eragon/ArUco/src/robot_camera_processor/src/robot_camera_processor_node.cpp:106:56: warning: narrowing conversion of ‘((-((RobotCameraProcessor*)this)->RobotCameraProcessor::marker_size_) / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
  106 |                         {-marker_size_/2, -marker_size_/2, 0}
      |                                           ~~~~~~~~~~~~~^~
/home/eragon/ArUco/src/robot_camera_processor/src/robot_camera_processor_node.cpp:129:13: error: ‘pub_image’ was not declared in this scope; did you mean ‘pub_image_’?
  129 |             pub_image->publish(*msg);
      |             ^~~~~~~~~
      |             pub_image_
/home/eragon/ArUco/src/robot_camera_processor/src/robot_camera_processor_node.cpp: In member function ‘void RobotCameraProcessor::publish_marker_pose(int, const Vec3d&, const Vec3d&)’:
/home/eragon/ArUco/src/robot_camera_processor/src/robot_camera_processor_node.cpp:136:34: warning: unused parameter ‘marker_id’ [-Wunused-parameter]
  136 |     void publish_marker_pose(int marker_id, const cv::Vec3d& rvec, const cv::Vec3d& tvec) {
      |                              ~~~~^~~~~~~~~
gmake[2]: *** [CMakeFiles/robot_camera_processor_node.dir/build.make:76: CMakeFiles/robot_camera_processor_node.dir/src/robot_camera_processor_node.cpp.o] Ошибка 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/robot_camera_processor_node.dir/all] Ошибка 2
gmake: *** [Makefile:146: all] Ошибка 2
